--- a/Frontend/bite/package.json
+++ b/Frontend/bite/package.json
@@ -13,9 +13,11 @@
     "proxy": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-transition-group": "^4.4.5",
     "react-use": "^17.4.0",
     "web-vitals": "^2.1.4"
   },
