--- a/Frontend/bite/package.json
+++ b/Frontend/bite/package.json
@@ -2,7 +2,7 @@
   "name": "bite",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://bite.herokuapp.com/",
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "envsub": "^4.1.0"
   }
 }
