--- a/Frontend/bite/package.json
+++ b/Frontend/bite/package.json
@@ -2,11 +2,7 @@
   "name": "bite",
   "version": "0.1.0",
   "private": true,
-  "proxy": {
-    "/api": {
-      "target": "${REACT_APP_PUBLIC_URL}"
-    }
-  },
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "envsub --syntax dollar package.json package.json && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -48,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "envsub": "^4.1.0"
   }
 }
